--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,28 @@
 	<title>Hello World!</title>
 	<meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 
-	<link rel="stylesheet" href="electron-browser-dark.css">
+	<link rel="stylesheet" href="electron-browser.css">
 	<link rel="stylesheet" href="index.css">
 
 	<!-- <link rel="stylesheet" href="index2.css"> -->
 </head>
 
-<body>
+<body >
 	<!-- We don't actually need a container, it's for demonstration only -->
 	<div class="browser">
 		<div class="tabs">
 			<div class="tabs-content"></div>
+			<div class="tab-add"></div>
+		</div>
+		<div class="tabs-bar">
+			<label>URL: </label>
+			<input id="url" type="url">
 		</div>
 		<div class="browser-views"></div>
 	</div>
+
+	<button class="btn-toggle">Toggle Dark Mode</button>
+
 
 	<script src="renderer.js"></script>
 </body>
