--- a/src/index.html
+++ b/src/index.html
@@ -20,15 +20,13 @@
 			<div class="tab-add"></div>
 		</div>
 		<div class="tabs-bar">
-			<label>URL: </label>
+			<button style="margin-left: 20px;" class="btn-toggle">Toggle Dark Mode</button>
+
+			<label style="margin-left: 20px;">URL: </label>
 			<input id="url" type="url">
 		</div>
 		<div class="browser-views"></div>
 	</div>
-
-	<button class="btn-toggle">Toggle Dark Mode</button>
-
-
 	<script src="renderer.js"></script>
 </body>
 </html>
