ready-for-production

--- a/src/example/index.html
+++ b/src/example/index.html
@@ -20,8 +20,7 @@
 			<div class="tab-add"></div>
 		</div>
 		<div style="padding: 5px;" class="tabs-bar">
-			<button style="margin-left: 20px; font-family: sans-serif; border: 2px red solid;"
-				class="btn-toggle">TOGGLE DARK MODE</button>
+			<button class="btn-toggle-theme">TOGGLE DARK MODE</button>
 
 			<label style="margin-left: 20px;">URL: </label>
 			<input id="url" type="url">
