--- a/src/example/index.html
+++ b/src/example/index.html
@@ -20,10 +20,7 @@
 			<div class="tab-add"></div>
 		</div>
 		<div style="padding: 5px;" class="tabs-bar">
-			<button class="btn-toggle-theme">TOGGLE DARK MODE</button>
-
-			<label style="margin-left: 20px;">URL: </label>
-			<input id="url" type="url">
+			<button id="btn-toggle-theme">Toggle dark mode</button>
 		</div>
 		<div class="browser-views"></div>
 	</div>
