Option to hide tabs bar

--- a/src/example/index.html
+++ b/src/example/index.html
@@ -19,7 +19,7 @@
 			<div class="tabs-content"></div>
 			<div class="tab-add"></div>
 		</div>
-		<div style="padding: 5px;" class="tabs-bar">
+		<div id="eb-tabs-bar" style="padding: 5px;" class="tabs-bar">
 			<button id="btn-toggle-theme">Toggle dark mode</button>
 		</div>
 		<div class="browser-views"></div>
